--- a/AOC/AOC.csproj
+++ b/AOC/AOC.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Combinatorics" Version="2.0.0" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
         <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1" />
+        <PackageReference Include="MathNet.Spatial" Version="0.6.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
