--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -1,12 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <IsPackable>false</IsPackable>
-        <OutputType>Exe</OutputType>
-        <RootNamespace>AOC</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,8 +13,5 @@
         <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1" />
         <PackageReference Include="MathNet.Spatial" Version="0.6.0" />
     </ItemGroup>
-    <ItemGroup>
-        <Content Include="input/**/*" CopyToOutputDirectory="PreserveNewest"/>
-    </ItemGroup>
-
+    
 </Project>
